created seperate controller to handle prediction start/stop, not tested
